2012-09-05  Romain Lenglet  <romain.lenglet@berabera.info>

	* src/omnifocus2agilezen.py, src/agilezen.py: Add the
	--api-base-url and --disable-verify-ssl-cert command-line options
	for troubleshooting.

2012-08-29  Romain Lenglet  <romain.lenglet@berabera.info>

	* src/agilezen.py: Use Requests sessions to maintain keep-alive
	connections to AgileZen.

2012-08-21  Romain Lenglet  <romain.lenglet@berabera.info>

	* src/omnifocus2agilezen.py (main): Modified the -p/--project
	command-line option to take a numerical project ID instead of a
	project name.

2012-08-20  Romain Lenglet  <romain.lenglet@berabera.info>

	* src/omnifocus2agilezen.py: Limit the cases where an AgileZen
	story's tasks are reordered, especially in the case a task is
	completed or deleted in OmniFocus.

	* src/omnifocus2agilezen.py: Make _get_az_story_text_for_project a
	non-class method.

2012-08-17  Romain Lenglet  <romain.lenglet@berabera.info>

	* src/omnifocus2agilezen.py: Handle duplicate task names.

	* src/agilezen.py: Add assertions to test HTTP status codes.

	* src/omnifocus2agilezen.py: Add an OF project's due date into its
	corresponding AZ story text.  Improve formatting of AZ story text.
	* src/omnifocus2agilezen.py (main): Add a --due-soon option to set
	the "due soon" period.

	* src/omnifocus2agilezen.py (main): Fix the project's name and URL
	in the help text.

	* src/omnifocus2agilezen.py
	(OmniFocusToAgileZenSync.sync_projects): Mark tasks as completed
	in OF if they are completed in AZ.

2012-08-13  Romain Lenglet  <romain.lenglet@berabera.info>

	* Initial version.


Copyright (C) 2012  Romain Lenglet

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU Affero General Public License as
published by the Free Software Foundation, either version 3 of the
License, or (at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of